--- a/public/pages/node-collection-list.html
+++ b/public/pages/node-collection-list.html
@@ -1,1 +1,22 @@
-<h1>List View</h1>
+<md-list ng-if="viewStyle == 'list'">
+  <md-list-item ng-repeat="flowNodeType in nodes"
+    ng-click="controller.addFlowNodeType(flowNodeType)"
+    data-type="{{flowNodeType.type}}"
+    class="node-collection-item">
+
+    <img class="node-collection-thumbnail"
+        src="{{flowNodeType.logo}}"
+        alt="{{flowNodeType.name || flowNodeType.type}}"/>
+
+    <div class="node-collection-description">
+      <h3 class="node-collection-title">
+        {{flowNodeType.name || flowNodeType.type}}
+      </h3>
+
+      <p class="node-collection-text">
+        {{flowNodeType.helpText}}
+      </p>
+    </div>
+
+  </md-list-item>
+</md-list>
