--- a/public/pages/node-collection.html
+++ b/public/pages/node-collection.html
@@ -1,4 +1,9 @@
-<div>
-  <ng-include src=" '/pages/node-collection-grid.html' " ng-if="viewStyle == 'grid'"></ng-include>
-  <ng-include src=" '/pages/node-collection-list.html' " ng-if="viewStyle == 'list'"></ng-include>
+<div class="node-collection">
+  <ng-include src=" '/pages/node-collection-list.html' "
+    ng-if="viewStyle == 'list'"
+    class="node-collection-list"></ng-include>
+    
+  <ng-include src=" '/pages/node-collection-grid.html' "
+    ng-if="viewStyle == 'grid'"
+    class="node-collection-list node-collection-list--grid"></ng-include>
 </div>
