Add filter input and design updates

--- a/public/pages/collection-browser.html
+++ b/public/pages/collection-browser.html
@@ -43,9 +43,9 @@
         <i class="fa fa-th-list fa-lg"></i>
       </button>
 
-      <form action="" class="collection-browser__filter-form">
-          <i class="fa fa-search fa-lg collection-browser__filter-icon"></i>
-        <input class="collection-browser__filter-input" type="search" name="Filter" placeholder="Filter...">
+      <form action="" class="sidebar__filter-form">
+        <i class="fa fa-search fa-lg sidebar__filter-icon"></i>
+        <input class="sidebar__filter-input" type="search" name="Filter" placeholder="Filter...">
       </form>
     </footer>
   </div>
