added debug functionality

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -20,7 +20,7 @@
   </style>
 </div>
 
-<!--
+
 <md-toolbar class="flow-top-bar">
   <div class="md-toolbar-tools">
     <h2 class="page-heading">
@@ -100,20 +100,8 @@
         </md-button>
       </div>
     </div>
-
-    <div>
-      <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-stopped': deviceOnline === false, stopping: stopping }" aria-label="Stop">
-        <md-tooltip>Stop</md-tooltip>
-        <i class="fa fa-stop"></i>
-      </md-button>
-
-      <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-playing': deviceOnline, deploying: deploying }" aria-label="Start">
-        <md-tooltip>Start</md-tooltip>
-        <i class="fa fa-play"></i>
-      </md-button>
-    </div>
   </div>
-</md-toolbar> -->
+</md-toolbar>
 
   <!-- <div style="z-index: 0;" class="workspace-container" w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection, 'mod+z':undoEdit, 'mod+y':redoEdit}" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
   </div> -->
