--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -1,70 +1,60 @@
 
 <md-toolbar class="flow-top-bar">
   <div class="md-toolbar-tools">
-    <h2 class="page-heading">
-      <a href class="menu-icon" ng-click="toggleNav()">
-        <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
-      </a>
-    </h2>
+    <md-button ng-click="toggleNav()" class="menu-icon flow-top-bar-tool flow-top-bar-tool--menu-button">
+      <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
+    </md-button>
 
-    <flow-editor-omnibox omni-search="omniSearch" flow-nodes="activeFlow.nodes" selected-flow-node="activeFlow.selectedFlowNode" ></flow-editor-omnibox>
-  </div>
+    <flow-editor-omnibox class="flow-top-bar-tool flow-top-bar-tool--omni-search" omni-search="omniSearch" flow-nodes="activeFlow.nodes" selected-flow-node="activeFlow.selectedFlowNode" ></flow-editor-omnibox>
 
-  <div class="md-toolbar-tools">
-    <div class="input-group flow-name dropdown" dropdown is-open="flowDropDownIsOpen">
-      <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name" style="border-right: 0px;">
-      <span class="input-group-btn flow-dropdown" id="flowMenuDropdown" style="border-left: 0px;">
-        <button class="btn btn-white" ng-click="toggleDropdown($event)">
-          <i class="fa fa-lg fa-angle-down input-addon"></i>
-        </button>
-      </span>
-      <ul class="dropdown-menu" role="menu" aria-labelledby="flowMenuDropdown" style="max-height: {{flowSelectorHeight}}px;">
-        <li class="text-center" data-toggle="dropdown" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
-        <li role="presentation"  class="divider"></li>
-        <li class="flow-item" data-toggle="dropdown" ng-repeat="flow in flows | orderBy: 'name'" >
-          <a ui-sref="material.flow({flowId: flow.flowId})"><i class="fa fa-fw fa-power-off" ng-class="{'online' : flow.online}"></i> {{flow.name}}</a>
-        </li>
-      </ul>
+    <div class="flow-top-bar-tool flow-top-bar-tool--omni-search">
+      <div class="input-group flow-name dropdown" dropdown is-open="flowDropDownIsOpen">
+        <input type="text" class="form-control" placeholder="Flow Name" ng-model="activeFlow.name" style="border-right: 0px;">
+        <ul class="dropdown-menu" role="menu" aria-labelledby="flowMenuDropdown" style="max-height: {{flowSelectorHeight}}px;">
+          <li class="text-center" data-toggle="dropdown" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
+          <li role="presentation"  class="divider"></li>
+          <li class="flow-item" data-toggle="dropdown" ng-repeat="flow in flows | orderBy: 'name'" >
+            <a ui-sref="material.flow({flowId: flow.flowId})"><i class="fa fa-fw fa-power-off" ng-class="{'online' : flow.online}"></i> {{flow.name}}</a>
+          </li>
+        </ul>
+        <span class="input-group-btn flow-dropdown" id="flowMenuDropdown" style="border-left: 0px;">
+          <button ng-click="toggleDropdown($event)">
+            <i class="fa fa-lg fa-angle-down input-addon"></i>
+          </button>
+        </span>
+      </div>
     </div>
-  </div>
 
-  <div class="flow-controls md-toolbar-tools" style="min-height: 50px;">
-    <div flex="0" flex-phone="95" flex-tablet="95" layout="row" layout-align="end" class="flow-controls md-toolbar-tools" style="min-height: 50px;">
-      <div flex layout="row" layout-align="space-between center">
-        <md-button ng-click="deleteFlow(activeFlow)" data-action="delete-flow" aria-label="Delete Flow">
-          <md-tooltip>Delete Flow</md-tooltip>
-          <i class="fa fa-lg fa-trash"></i>
-        </md-button>
+    <div class="flow-controls flow-top-bar-tool flow-top-bar-tool--controls">
+      <md-button ng-click="deleteFlow(activeFlow)" data-action="delete-flow" aria-label="Delete Flow">
+        <md-tooltip>Delete Flow</md-tooltip>
+        <i class="fa fa-lg fa-trash"></i>
+      </md-button>
 
-        <md-button ng-click="createBluprint(activeFlow)" aria-label="Create Bluprint">
-          <md-tooltip>Create a Bluprint</md-tooltip>
-          <i class="fa fa-lg fa-share-alt"></i>
-        </md-button>
-      </div>
+      <md-button ng-click="createBluprint(activeFlow)" aria-label="Create Bluprint">
+        <md-tooltip>Create a Bluprint</md-tooltip>
+        <i class="fa fa-lg fa-share-alt"></i>
+      </md-button>
 
-      <div flex layout="row" layout-align="center">
-        <md-button ng-click="undoEdit()" ng-disabled="!undoable()" aria-label="Undo Edit">
-          <md-tooltip>Undo</md-tooltip>
-          <i class="fa fa-reply fa-lg"></i>
-        </md-button>
+      <md-button ng-click="undoEdit()" ng-disabled="!undoable()" aria-label="Undo Edit">
+        <md-tooltip>Undo</md-tooltip>
+        <i class="fa fa-reply fa-lg"></i>
+      </md-button>
 
-        <md-button ng-click="redoEdit()" ng-disabled="!redoable()" aria-label="Redo Edit">
-          <md-tooltip>Redo</md-tooltip>
-          <i class="fa fa-mail-forward fa-lg"></i>
-        </md-button>
-      </div>
+      <md-button ng-click="redoEdit()" ng-disabled="!redoable()" aria-label="Redo Edit">
+        <md-tooltip>Redo</md-tooltip>
+        <i class="fa fa-mail-forward fa-lg"></i>
+      </md-button>
 
-      <div flex layout="row" layout-align="center">
-        <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-stopped': deviceOnline === false, stopping: stopping }" aria-label="Stop">
-          <md-tooltip>Stop</md-tooltip>
-          <i class="fa fa-stop"></i>
-        </md-button>
+      <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-stopped': deviceOnline === false, stopping: stopping }" aria-label="Stop">
+        <md-tooltip>Stop</md-tooltip>
+        <i class="fa fa-stop"></i>
+      </md-button>
 
-        <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-playing': deviceOnline, deploying: deploying, 'needs-to-be-deployed': needsToBeDeployed }" aria-label="Start">
-          <md-tooltip>Start</md-tooltip>
-          <i class="fa fa-play"></i>
-        </md-button>
-      </div>
+      <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-playing': deviceOnline, deploying: deploying, 'needs-to-be-deployed': needsToBeDeployed }" aria-label="Start">
+        <md-tooltip>Start</md-tooltip>
+        <i class="fa fa-play"></i>
+      </md-button>
     </div>
   </div>
 </md-toolbar>
