--- a/public/pages/node-collection-grid.html
+++ b/public/pages/node-collection-grid.html
@@ -8,7 +8,7 @@
     class="animated-popout"
     md-rowspan="1"
     md-colspan="1"
-    ng-repeat="flowNodeType in nodes"
+    ng-repeat="flowNodeType in nodes | filter: filterQuery"
     ng-click="controller.addFlowNodeType(flowNodeType)"
     data-type="{{flowNodeType.type}}">
 
