--- a/public/pages/flow-debug-browser.html
+++ b/public/pages/flow-debug-browser.html
@@ -5,7 +5,7 @@
   <div ng-if="!viewSource">
     <h5 ng-if="flow.selectedFlowNode.name">Selected Node: {{ flow.selectedFlowNode.name }}</h5>
     <ul class="flow-browser-debug">
-      <li ng-repeat="debug in debugLines | filter : {$: flow.selectedFlowNode.id}">
+      <li ng-repeat="debug in debugLines | filter : {$: flow.selectedFlowNode.id} | filter:filterQuery">
       	<small>{{ debug.date | date: 'shortDate'}} {{ debug.date | date: 'mediumTime'}} - {{ debug.message.name }}</small>
         <prism code="debug.message"></prism>
       </li>
