--- a/public/pages/flow-inspector.html
+++ b/public/pages/flow-inspector.html
@@ -9,4 +9,7 @@
     ng-if="!flow.selectedFlowNode"
     flow="flow">
   </flow-detail-editor>
+
+  <flow-node-setup node-type="flow.selectedFlowNode"></flow-node-setup>
+
 </div>
