Add delete flow and view source

--- a/public/pages/collection-browser.html
+++ b/public/pages/collection-browser.html
@@ -41,6 +41,10 @@
         <i class="fa fa-ban fa-lg"></i>
       </button>
 
+      <button ng-click="controller.toggleViewSource()" class="sidebar__toolbar-button">
+        <i class="fa fa-code fa-lg"></i>
+      </button>
+
       <div class="sidebar__filter-form">
         <i class="fa fa-search fa-lg sidebar__filter-icon"></i>
         <input ng-model="filterQuery" class="sidebar__filter-input" type="search" name="Filter" placeholder="Filter...">
