--- a/public/pages/flow-detail-editor.html
+++ b/public/pages/flow-detail-editor.html
@@ -17,8 +17,7 @@
         <textarea ng-model="flow.description" columns="1" md-maxlength="300"></textarea>
       </md-input-container>
 
-      <md-button>View Source</md-button>
-      <md-button  ng-click="deleteNode()">Delete Flow</md-button>
+      <md-button ng-click="controller.deleteFlow(flow)">Delete Flow</md-button>
     </div>
 
   </main>
