sidebar ui updates

--- a/public/pages/flow-inspector.html
+++ b/public/pages/flow-inspector.html
@@ -1,6 +1,6 @@
 <div class="sidebar__pane">
   <flow-node-editor
-    ng-if="flow.selectedFlowNode"
+    ng-if="flow.selectedFlowNode && flow.selectedFlowNode.resourceType != 'node-type'"
     flow-id="flow.flowId"
     flow-node="flow.selectedFlowNode">
   </flow-node-editor>
@@ -10,6 +10,5 @@
     flow="flow">
   </flow-detail-editor>
 
-  <flow-node-setup node-type="flow.selectedFlowNode"></flow-node-setup>
-
+  <flow-node-setup ng-if="flow.selectedFlowNode.resourceType === 'node-type'" node-type="flow.selectedFlowNode"></flow-node-setup>
 </div>
