Fix styling for node setup

--- a/public/pages/flow-node-setup.html
+++ b/public/pages/flow-node-setup.html
@@ -6,7 +6,7 @@
   </header>
 
   <main class="sidebar__pane-body">
-    <div class="sidebar__pane-form">
+    <div class="sidebar__flow-node-setup">
       <img height="100" ng-src="{{nodeType.logo}}">
       <h3 class="text-center">This Node requires setup</h3>
       <p class="text-center">
