Update sidebar header

--- a/public/pages/flow-detail-editor.html
+++ b/public/pages/flow-detail-editor.html
@@ -1,7 +1,7 @@
 <div class="sidebar__pane-content">
   <header class="sidebar__toolbar sidebar__toolbar--header">
     <div class="md-toolbar-tools">
-      <h1>{{flow.name}}</h1>
+      <h1 class="sidebar__pane-title">Flow Inspector</h1>
     </div>
   </header>
 
