--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -1,20 +1,22 @@
 <div class="sidebar__pane-content">
   <header class="sidebar__toolbar sidebar__toolbar--header">
     <div class="md-toolbar-tools">
-      <h1>{{flowNode.name || flowNode.class}}</h1>
+      <h1 class="sidebar__pane-title">Node Inspector</h1>
       <span flex></span>
       <md-button ng-click="toggleHelp()" aria-label="Toggle Help"><i class="fa fa-lg fa-question"></i></md-button>
-      <md-button ng-click="deleteNode()" aria-label="Delete"><i class="fa fa-lg fa-trash"></i></md-button>
+      <!-- <md-button ng-click="deleteNode()" aria-label="Delete"><i class="fa fa-lg fa-trash"></i></md-button> -->
     </div>
   </header>
 
   <main class="sidebar__pane-body">
     <div class="flow-node-editor ng-hide" ng-show="flowNode.resourceType === 'flow-node'">
       <form class="sidebar__pane-form">
-        <p class="help-block" ng-if="showHelp" marked="flowNodeType.helpText || 'No help is available for this node'">
-        </p>
+        <div class="flow-node-editor-help-block" ng-if="showHelp" marked="flowNodeType.helpText || 'No help is available for this node'">
+        </div>
         <div class="flow-node-form" ng-include="flowNodeType.formTemplatePath"></div>
         <md-switch ng-model="flowNode.debug">Debug</md-switch>
+
+        <md-button ng-click="deleteNode()" aria-label="Delete">Delete Node</md-button>
       </form>
     </div>
   </main>
