--- a/public/pages/flow-node-setup.html
+++ b/public/pages/flow-node-setup.html
@@ -1,7 +1,7 @@
 <div class="sidebar__pane-content">
   <header class="sidebar__toolbar sidebar__toolbar--header">
     <div class="md-toolbar-tools">
-      <h1>Setup Node</h1>
+      <h1 class="sidebar__pane-title">Setup Node</h1>
     </div>
   </header>
 
