--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -3,20 +3,18 @@
     <div class="md-toolbar-tools">
       <h1 class="sidebar__pane-title">Node Inspector</h1>
       <span flex></span>
-      <md-button ng-click="toggleHelp()" aria-label="Toggle Help"><i class="fa fa-lg fa-question"></i></md-button>
-      <!-- <md-button ng-click="deleteNode()" aria-label="Delete"><i class="fa fa-lg fa-trash"></i></md-button> -->
+      <md-button ng-click="deleteNode()" aria-label="Delete"><i class="fa fa-lg fa-trash"></i></md-button>
     </div>
   </header>
 
   <main class="sidebar__pane-body">
     <div class="flow-node-editor ng-hide" ng-show="flowNode.resourceType === 'flow-node'">
+      <!-- <md-button ng-click="toggleHelp()" aria-label="Toggle Help">Help</md-button> -->
       <form class="sidebar__pane-form">
         <div class="flow-node-editor-help-block" ng-if="showHelp" marked="flowNodeType.helpText || 'No help is available for this node'">
         </div>
         <div class="flow-node-form" ng-include="flowNodeType.formTemplatePath"></div>
         <md-switch ng-model="flowNode.debug">Debug</md-switch>
-
-        <md-button ng-click="deleteNode()" aria-label="Delete">Delete Node</md-button>
       </form>
     </div>
   </main>
