--- a/public/pages/node-collection-list.html
+++ b/public/pages/node-collection-list.html
@@ -1,5 +1,5 @@
 <md-list ng-if="viewStyle == 'list'">
-  <md-list-item ng-repeat="flowNodeType in nodes | filter: filterQuery"
+  <md-list-item ng-repeat="flowNodeType in filteredNodes = (nodes | filter: filterQuery)"
     ng-click="controller.addFlowNodeType(flowNodeType)"
     data-type="{{flowNodeType.type}}"
     class="node-collection-item">
@@ -19,4 +19,8 @@
     </div>
 
   </md-list-item>
+
+  <h3 class="node-collection-no-matches" ng-show="!filteredNodes.length">
+    No matches for "{{filterQuery.name}}"
+  </h3>
 </md-list>
