Made tabs more obvious, added debug placeholder

--- a/public/pages/flow-debug-browser.html
+++ b/public/pages/flow-debug-browser.html
@@ -11,4 +11,10 @@
       </li>
     </ul>
   </div>
+  <div ng-if="!debugLines.length" class="flow-browser-debug-no-debug-data">
+    <h3>No Debug Output</h3>
+    <p>
+      You can see the raw output of your nodes here. To activate debugging, add the debug node, or toggle debugging in the node inspector.
+    </p>
+  </div>
 </div>
