--- a/public/pages/flow-node-editor.html
+++ b/public/pages/flow-node-editor.html
@@ -8,8 +8,8 @@
   </header>
 
   <main class="sidebar__pane-body">
-    <div class="flow-node-editor ng-hide" ng-show="flowNode.resourceType === 'flow-node'">
-      <!-- <md-button ng-click="toggleHelp()" aria-label="Toggle Help">Help</md-button> -->
+    <div ng-hide="showFlowNodeEditor"><i class="fa fa-spinner fa-4x fa-spin"></i></div>
+    <div class="flow-node-editor" ng-show="flowNode.resourceType === 'flow-node' && showFlowNodeEditor">
       <form class="sidebar__pane-form">
         <div class="flow-node-editor-help-block" ng-if="showHelp" marked="flowNodeType.helpText || 'No help is available for this node'">
         </div>
