--- a/public/pages/node-collection-list.html
+++ b/public/pages/node-collection-list.html
@@ -24,7 +24,8 @@
 
   </md-list-item>
 
-  <h3 class="node-collection-no-matches" ng-show="!filteredNodes.length">
+  <h3 class="node-collection-no-matches" ng-show="!filteredNodes.length && filterQuery.name.length">
     No matches for "{{filterQuery.name}}"
   </h3>
+
 </md-list>
