made the sorting prettier

--- a/public/pages/shared-bluprints.html
+++ b/public/pages/shared-bluprints.html
@@ -22,7 +22,7 @@
       <a href ng-repeat="tag in bluprintFilter" class="directory__search-tags">{{tag}}<i ng-click="controller.searchByTag(tag)" class="fa fa-times"></i></a>
     </div>
 
-    <div class="directory__collections" ng-hide="controller.collectionName">
+    <!-- <div class="directory__collections" ng-hide="controller.collectionName">
       <a ui-sref="material.discovercollection({collection: 'home automation'})" class="md-whiteframe-z1 directory__collection directory__collection--home">
         <h1 class="directory__collection-name">Home
           <br> Automation</h1>
@@ -49,12 +49,15 @@
       <a ui-sref="material.discover" class="directory__collection__header md-whiteframe-z1 directory__collection directory__collection--work" ng-show="controller.collectionName == 'work automation'">
         <h1 class="directory__collection-name">Work Automation</h1>
       </a>
+    </div> -->
+    <div class="directory__header">
+      <h2 class="directory__header-text">{{sortMethods[sortMethod]}}</h2>
+      <md-select ng-model="sortMethod" placeholder="Filter Bluprints" class="node-wizard__form-actions">
+        <md-option ng-value="'-likedBy.length'">Top Liked</md-option>
+        <md-option ng-value="'name'">Alphabetical (A -> Z)</md-option>
+        <md-option ng-value="'-name'">Alphabetical (Z -> A)</md-option>
+      </md-select>
     </div>
-
-  <!--   <div class="directory__header">
-    <h2 class="directory__header-text">Top Liked</h2>
-  </div> -->
-
     <div class="bluprint-loading-indicator" ng-show="isLoading">
       <h1 class="text-center">
         <i class="fa fa-spin fa-refresh"></i>
@@ -65,7 +68,7 @@
       <img ng-src="{{controller.randomRobot()}}" style="max-height:30%;max-width:30%;">
     </div>
     <ul class="bluprints">
-      <li ng-repeat="bluprint in controller.bluprints | orderBy: 'name' | filter: {name:bluprintSearch}" class="flow-container">
+      <li ng-repeat="bluprint in controller.bluprints | orderBy: sortMethod | filter: {name:bluprintSearch}" class="flow-container">
         <div class="flow md-whiteframe-z1">
           <div class="header">
             <h3 class="name">
