compose node reworked and organized

--- a/public/pages/node_forms/compose_form.html
+++ b/public/pages/node_forms/compose_form.html
@@ -4,25 +4,4 @@
 </md-input-container>
 <br>
 <h3>Keys</h3>
-<md-list>
-  <md-item ng-repeat="key in flowNode.composeKeys track by $index">
-    <md-item-content>
-      <div class="md-tile-content" layout="row" layout-align="space-between" style="padding: 5px 0 0 0;">
-        <div style="margin: auto 10px auto 0; font-weight: bold; font-size: 1.5em">{{$index + 1}}.</div>
-        <md-input-container>
-          <label>Value</label>
-          <input required label="Value" ng-model="flowNode.composeValues[$index]">
-        </md-input-container>
-        <div style="margin: auto 0; font-weight: bold; font-size: 1.1em;">as</div>
-        <md-input-container>
-          <label>Key</label>
-          <input required label="Key" ng-model="flowNode.composeKeys[$index]">
-        </md-input-container>
-        <md-button class="md-fab" ng-click="flowNode.composeKeys.splice($index, 1);flowNode.composeValues.splice($index, 1)">
-            <i class="fa fa-minus"></i>
-        </md-button>
-      </div>
-    </md-item-content>
-  </md-item>
-</md-list>
-<md-button ng-click="flowNode.composeKeys.push('')" class="md-primary" aria-label="Add Key">Add Key</md-button>
+<compose data="flowNode.composeValues">
