--- a/public/pages/flow-detail-editor.html
+++ b/public/pages/flow-detail-editor.html
@@ -6,16 +6,53 @@
   </header>
 
   <main class="sidebar__pane-body">
-    <div class="sidebar__pane-form">
-      <md-input-container>
-        <label>Name</label>
-        <input ng-model="flow.name">
-      </md-input-container>
+    <div class="sidebar__pane__section sidebar__pane-form">
+      <div class="sidebar__pane__section-header">
+        <h5 class="sidebar__pane__section-title">Flow Information</h5>
+        <button aria-label="Show/Hide Flow Information" class="md-button" ng-click="showInfo = !showInfo">
+          <span ng-if="showInfo">Hide</span>
+          <span ng-if="!showInfo">Show</span>
+        </button>
+      </div>
+      <div class="sidebar__pane__section-body" ng-hide="!showInfo">
+        <md-input-container>
+          <label>Name</label>
+          <input ng-model="flow.name">
+        </md-input-container>
 
-      <md-input-container>
-        <label>Description</label>
-        <textarea ng-model="flow.description" columns="1" md-maxlength="300"></textarea>
-      </md-input-container>
+        <md-input-container>
+          <label>Description</label>
+          <textarea ng-model="flow.description" columns="1" md-maxlength="300"></textarea>
+        </md-input-container>
+      </div>
     </div>
+
+    <md-divider ng-hide="showNodes && showInfo"></md-divider>
+
+    <div class="sidebar__pane__section">
+      <div class="sidebar__pane__section-header">
+        <h5 class="sidebar__pane__section-title">Nodes In Flow</h5>
+        <button aria-label="Show/Hide Node List" class="md-button" ng-click="showNodes = !showNodes">
+          <span ng-if="showNodes">Hide</span>
+          <span ng-if="!showNodes">Show</span>
+        </button>
+      </div>
+
+      <md-list class="sidebar__pane__section-body">
+        <md-list-item ng-hide="!showNodes" ng-repeat="node in flow.nodes | orderBy: 'name'">
+          <div class="sidebar__pane-node-list" ng-mouseenter="showDelete=!showDelete" ng-mouseleave="showDelete=!showDelete">
+            <button class="sidebar__pane-node-list md-button" ng-click="$emit('flow-node-type-selected', node);">
+              <img class="sidebar__pane-node-thumbnail" src="{{node.logo}}" alt="{{node.class || node.type}}"/>
+              <span class="truncate">{{node.name}}</span>
+            </button>
+
+            <button aria-label="Delete Node" ng-click="$emit('flow-node-delete', node);" ng-show="showDelete" class="md-button">
+              <md-icon class="fa fa-trash md-warn"></md-icon>
+            </button>
+          </div>
+        </md-list-item>
+      </md-list>
+    </div>
+    <md-divider></md-divider>
   </main>
 </div>
