migrate old compose keys and values

--- a/public/pages/node_forms/compose_form.html
+++ b/public/pages/node_forms/compose_form.html
@@ -4,4 +4,4 @@
 </md-input-container>
 <br>
 <h3>Keys</h3>
-<compose data="flowNode.composeValues">
+<compose data="flowNode.compose" compose-values="flowNode.composeValues" compose-keys="flowNode.composeKeys">
