finished nodes in flow list for sidebar & fixed randomRobotNumber

--- a/public/pages/flow-debug-browser.html
+++ b/public/pages/flow-debug-browser.html
@@ -11,9 +11,9 @@
       </li>
     </ul>
   </div>
-  <div ng-if="!debugLines.length" class="flow-browser-debug-no-debug-data">
-    <h3>No Debug Output</h3>
-    <p>
+  <div ng-if="!debugLines.length" class="sidebar__alert">
+    <h3 class="sidebar__alert-title">No Debug Output</h3>
+    <p class="sidebar__alert-body">
       You can see the raw output of your nodes here. To activate debugging, add the debug node, or toggle debugging in the node inspector.
     </p>
   </div>
