--- a/public/pages/flow-detail-editor.html
+++ b/public/pages/flow-detail-editor.html
@@ -6,15 +6,15 @@
   </header>
 
   <main class="sidebar__pane-body">
-    <div class="sidebar__pane__section sidebar__pane-form">
-      <div class="sidebar__pane__section-header">
-        <h5 class="sidebar__pane__section-title">Flow Information</h5>
-        <button aria-label="Show/Hide Flow Information" class="md-button" ng-click="showInfo = !showInfo">
-          <span ng-if="showInfo">Hide</span>
-          <span ng-if="!showInfo">Show</span>
+    <div class="sidebar__section sidebar__pane-form">
+      <div class="sidebar__section-header">
+        <h5 class="sidebar__section-title">Flow Information</h5>
+        <button ng-click="hideInfo = !hideInfo" ng-class="{'sidebar__section-toggle-btn': !hideInfo}" class="sidebar__button" aria-label="Show/Hide Flow Information">
+          <span ng-hide="hideInfo">Hide</span>
+          <span ng-hide="!hideInfo">Show</span>
         </button>
       </div>
-      <div class="sidebar__pane__section-body" ng-hide="!showInfo">
+      <div class="sidebar__section-body" ng-hide="hideInfo">
         <md-input-container>
           <label>Name</label>
           <input ng-model="flow.name">
@@ -27,32 +27,38 @@
       </div>
     </div>
 
-    <md-divider ng-hide="showNodes && showInfo"></md-divider>
+    <md-divider class="sidebar__section-divider"></md-divider>
 
-    <div class="sidebar__pane__section">
-      <div class="sidebar__pane__section-header">
-        <h5 class="sidebar__pane__section-title">Nodes In Flow</h5>
-        <button aria-label="Show/Hide Node List" class="md-button" ng-click="showNodes = !showNodes">
-          <span ng-if="showNodes">Hide</span>
-          <span ng-if="!showNodes">Show</span>
+    <div class="sidebar__section">
+      <div class="sidebar__section-header">
+        <h5 class="sidebar__section-title">Nodes In Flow</h5>
+        <button ng-click="showNodes = !showNodes" ng-class="{'sidebar__section-toggle-btn': showNodes}" class="sidebar__button" aria-label="Show/Hide Node List">
+          <span ng-show="showNodes">Hide</span>
+          <span ng-show="!showNodes">Show</span>
         </button>
       </div>
 
-      <md-list class="sidebar__pane__section-body">
-        <md-list-item ng-hide="!showNodes" ng-repeat="node in flow.nodes | orderBy: 'name'">
-          <div class="sidebar__pane-node-list" ng-mouseenter="showDelete=!showDelete" ng-mouseleave="showDelete=!showDelete">
-            <button class="sidebar__pane-node-list md-button" ng-click="$emit('flow-node-type-selected', node);">
-              <img class="sidebar__pane-node-thumbnail" src="{{node.logo}}" alt="{{node.class || node.type}}"/>
+      <div ng-show="showNodes" class="sidebar__section-body">
+        <div ng-show="!flow.nodes.length" class="sidebar__alert">
+          <h1 class="sidebar__alert-title">You have no nodes in your flow.</h1>
+          <img ng-src="{{controller.randomRobot()}}" class="sidebar__alert-icon">
+        </div>
+
+        <ul class="nodes-in-flow">
+          <li ng-repeat="node in flow.nodes | orderBy: 'name'" ng-mouseenter="showDelete=!showDelete" ng-mouseleave="showDelete=!showDelete" class="nodes-in-flow__item">
+            <button ng-click="$emit('flow-node-type-selected', node);" class="sidebar__button node-in-flow__button">
+              <img src="{{node.logo}}" alt="{{node.class || node.type}}" class="sidebar__pane-node-thumbnail"/>
               <span class="truncate">{{node.name}}</span>
             </button>
 
-            <button aria-label="Delete Node" ng-click="$emit('flow-node-delete', node);" ng-show="showDelete" class="md-button">
-              <md-icon class="fa fa-trash md-warn"></md-icon>
+            <button ng-click="$emit('flow-node-delete', node);" ng-show="showDelete" aria-label="Delete Node" class="sidebar__button node-in-flow__button--delete">
+              <i class="fa fa-trash fa-lg"></i>
             </button>
-          </div>
-        </md-list-item>
-      </md-list>
+          </li>
+        </ul>
+      </div>
     </div>
-    <md-divider></md-divider>
+
+    <md-divider ng-hide="showNodes" class="sidebar__section-divider"></md-divider>
   </main>
 </div>
