--- a/public/pages/flow-detail-editor.html
+++ b/public/pages/flow-detail-editor.html
@@ -5,7 +5,7 @@
     </div>
   </header>
 
-  <main class="sidebar__pane-body" ng-class="{'flexing-it': !hideInfo}">
+  <main class="sidebar__pane-body" ng-class="{'sidebar-section-expanded': !hideInfo}">
     <div class="sidebar__section sidebar__pane-form">
       <div class="sidebar__section-header">
         <h5 class="sidebar__section-title">Flow Information</h5>
