Removing CAS for now

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -4,14 +4,8 @@
       <img class="auth__octoblu-logo" src="/assets/images/octoblu-color.png">
 
       <div class="auth__form-row">
-        <md-button class="auth__button--citrix" ng-href="{{controller.citrixLoginUri}}" >
-          Sign in with Citrix
-        </md-button>
-      </div>
-
-      <div class="auth__form-row">
         <md-button class="auth__button--email" ng-href="{{controller.emailPasswordLoginUri}}" >
-          <i class="fa fa-lg fa-envelope-o"></i> Email
+          <i class="fa fa-lg fa-envelope-o"></i> Sign in with Email
         </md-button>
       </div>
 
